--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 class="subtitle">(이환희)</h2>
 
         
-          <img src="http://milab.snu.ac.kr/img/members/hhL.jpg" alt="Face", width=200 />
+          <img src="http://milab.snu.ac.kr/img/members/hhL.jpg" width=200 alt="Face" />
         
         <p>Ph.D student in ECE at Seoul National University</p>
         <i class="material-icons md-18">location_on</i> Seoul, Korea<br/>
