--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="title">Hwanhee Lee</h1>
-        <h2 class="subtitle">(이환희)</h2>
+        <h1 class="title">Henry Hwanhee Lee</h1>
+        <h2 class="subtitle">이환희</h2>
 
         
-          <img src="http://milab.snu.ac.kr/img/members/hhL.jpg" width=200 alt="Face" />
+          <img src="profile.jpg" width=200 alt="Face" />
         
         <p>Ph.D student in ECE at Seoul National University</p>
         <i class="material-icons md-18">location_on</i> Seoul, Korea<br/>
