--- a/index.html
+++ b/index.html
@@ -75,8 +75,17 @@
 <h3 id="publications">Publications</h3>
 
 <ul>
-      <p><li>
-	      <b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Joongbo Shin, and Kyomin Jung,
+			<p><li>
+				
+			Taegwan Kang, <b>Hwanhee Lee</b>, Byeongjin Choe, and Kyomin Jung, 
+						        <a href="">
+								<em>Entangled Bidirectional Encoder to Autoregressive Decoder for Sequential Recommendation,</em>
+							</a>
+							 International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR), July 2021, Virtual  				
+			</li></p>  	
+	
+      			<p><li>
+	      		<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Joongbo Shin, and Kyomin Jung,
 							<a href="https://arxiv.org/abs/2005.00192">
 								<em>KPQA: A Metric for Generative Question Answering Using Keyphrase Weights,</em>
 							</a>
@@ -94,7 +103,7 @@
 			</li></p>
 			<p><li>
 				
-				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Kyomin Jung, 
+			<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Kyomin Jung, 
 						        <a href="https://www.aclweb.org/anthology/2020.eval4nlp-1.4/">
 								<em>ViLBERTScore: Evaluating Image Caption Using Vision-and-Language BERT,</em>
 							</a>
