--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
 							</a>]                            
                         </li></p>
 			<p><li>
+                            Jaewoong Lee*, Heejoon Lee*, Hwanhee Lee, Kyomin Jung, 
+						        <a href="">
+								<em>Learning to Select Question-Relevant Relations for Visual Question Answering,</em>
+							</a>
+							NAACL Workshop on Multimodal Artificial Intelligence (MAI), June 2021, Virtual
+			</li></p>	
+			<p><li>
 				Hyunkyung Bae, Minwoo Lee, Ahhyeon Kim, <b>Hwanhee Lee</b>, Cheongjae Lee, Cheoneum Park, Donghyeon Kim, Kyomin Jung, 
 						        <a href="http://milab.snu.ac.kr/pub/2021RSS.pdf">
 								<em>Relevance Similarity Scorer and Entity Guided Reranking for Knowledge Grounded Dialog System,</em>
