--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							</a>]                            
                         </li></p>
 			<p><li>
-                            Jaewoong Lee*, Heejoon Lee*, Hwanhee Lee, Kyomin Jung, 
+				Jaewoong Lee*, Heejoon Lee*, <b>Hwanhee Lee</b>, Kyomin Jung, 
 						        <a href="">
 								<em>Learning to Select Question-Relevant Relations for Visual Question Answering,</em>
 							</a>
