--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<a href="https://arxiv.org/abs/2005.00192">
 								<em>KPQA: A Metric for Generative Question Answering Using Keyphrase Weights,</em>
 							</a>
-							Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL), June 2021, Mexico City, Mexico.
+							Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL), June 2021, Virtual
 							[<a href="https://github.com/hwanheelee1993/KPQA", style="color:brown">
 								<em>code</em>
 							</a>]                            
@@ -125,7 +125,7 @@
 							<a href="https://arxiv.org/pdf/1912.00846.pdf">
 								<em>Attentive Modality Hopping Mechanism for Speech Emotion Recognition,</em>
 							</a>
-							IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) -  <b>(Oral)</b>, May 2020, Barcelona, Spain.
+							IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) -  <b>(Oral)</b>, May 2020, Virtual
 			</li></p>       
       <p><li>
 	      <b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Kyomin Jung, 
