--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </a>
         <a href="https://github.com/hwanheelee1993">
           <i class="fab fa-github"></i> Github<br/>
+        <a href="CV.pdf">
+          cv<br/>		
         </a>
       </header>
       <section>
