--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 <h3 id="publications">Publications</h3>
 
 <ul>
+                	<p><li>
+							Hwanhee Lee, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung,
+							<a href="">
+								<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
+							</a>
+							The Joint Conference of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing (ACL-IJCNLP), August 2021, Virtual Conference.
+                        </li></p>	
 			<p><li>
 				
 			Taegwan Kang, <b>Hwanhee Lee</b>, Byeongjin Choe, and Kyomin Jung, 
