--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <ul>
                 	<p><li>
-							Hwanhee Lee, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung,
+				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung,
 							<a href="">
 								<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
 							</a>
