--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<a href="https://arxiv.org/abs/2005.00192">
 								<em>KPQA: A Metric for Generative Question Answering Using Keyphrase Weights,</em>
 							</a>
-							NAACL 2021,
+							NAACL 2021
 							[<a href="https://github.com/hwanheelee1993/KPQA", style="color:brown">
 								<em>code</em>
 							</a>]                            
@@ -123,7 +123,7 @@
 						        <a href="https://www.aclweb.org/anthology/2020.eval4nlp-1.4/">
 								<em>ViLBERTScore: Evaluating Image Caption Using Vision-and-Language BERT,</em>
 							</a>
-							EMNLP 2020 Workshop on Evaluation and Comparison of NLP Systems,
+							EMNLP 2020 Workshop on Evaluation and Comparison of NLP Systems (Eval4NLP)
 							[<a href="https://github.com/hwanheelee1993/ViLBERTScore", style="color:brown">
 								<em>code</em>
 							</a>]  				
@@ -134,7 +134,7 @@
 							<a href="https://arxiv.org/pdf/1912.00846.pdf">
 								<em>Attentive Modality Hopping Mechanism for Speech Emotion Recognition,</em>
 							</a>
-							ICASSP 2020
+							ICASSP 2020 (Oral)
 			</li></p>       
       <p><li>
 	      <b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Kyomin Jung, 
