--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
 				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung, <br> ACL 2021
                         </li></p>	
 			<p><li>
+				<a href="">
 								<em>Entangled Bidirectional Encoder to Autoregressive Decoder for Sequential Recommendation,</em>
 							</a><br>
 				
 				Taegwan Kang, <b>Hwanhee Lee</b>, Byeongjin Choe, and Kyomin Jung, 
-								<a href=""><br>	
+								<br>	
 							 SIGIR 2021 				
 			</li></p>  	
 	
