--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <h3 id="publications">Publications</h3>
 
 <ul>
+	<h4 id="types">Conference Publications</h4>
                 	<p><li>
 				<a href="">
 					<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
