--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			</li></p>  	
 	
       			<p><li>
-				<a href="https://arxiv.org/abs/2005.00192">
+				<a href="https://www.aclweb.org/anthology/2021.naacl-main.170/">
 					<em>KPQA: A Metric for Generative Question Answering Using Keyphrase Weights,</em>
 				</a><br>				
 	      			<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Joongbo Shin, and Kyomin Jung<br>
