--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
 		        <h4 id="conferences">Conference Publications</h4>
 
                 	<p><li>
-				<a href="https://arxiv.org/abs/2106.14019.pdf">
+				<a href="https://aclanthology.org/2021.acl-short.29.pdf">
 					<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
 				</a><br>				
-				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung, <br> ACL 2021
+				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung, <br> ACL 2021 [<a href="https://github.com/hwanheelee1993/UMIC", style="color:brown">
+								<em>code</em>
+							</a>]
                         </li></p>	
 			<p><li>
-				<a href="">
+				<a href="https://dl.acm.org/doi/abs/10.1145/3404835.3463016">
 								<em>Entangled Bidirectional Encoder to Autoregressive Decoder for Sequential Recommendation,</em>
 							</a><br>
 				
