--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
 					<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
 				</a><br>				
 				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung, <br> ACL 2021 [<a href="https://github.com/hwanheelee1993/UMIC", style="color:brown">
-								<em>code</em>
+								<em>Code</em>
+							</a>] [<a href="materials/ACL21-UMIC-Slides.pdf", style="color:brown">
+								<em>Slide</em>
+							</a>] [<a href="materials/ACL21-UMIC-Poster.pdf", style="color:brown">
+								<em>Poster</em>
 							</a>]
                         </li></p>	
 			<p><li>
