--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
 				</a><br>				
 	      			<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Joongbo Shin, and Kyomin Jung<br>
 				NAACL 2021 [<a href="https://github.com/hwanheelee1993/KPQA", style="color:brown">
-								<em>code</em>
+								<em>Code</em>
+							</a>] [<a href="materials/NAACL21-KPQA-Slides.pdf", style="color:brown">
+								<em>Slide</em>
+							</a>] [<a href="materials/NAACL21-KPQA-Poster.pdf", style="color:brown">
+								<em>Poster</em>
 							</a>]                            
                         </li></p>
                 	<p><li>
