--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Kyomin Jung<br>
 							EMNLP 2020 Workshop on Evaluation and Comparison of NLP Systems (Eval4NLP)
 							[<a href="https://github.com/hwanheelee1993/ViLBERTScore", style="color:brown">
-								<em>code</em>
+								<em>Code</em>
 							</a>]  				
 			</li></p>  
       <p><li>
