--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <div class="wrapper">
       <header>
-	      <h1 class="title">Henry Hwanhee Lee (이환희)</h1>
+	      <h1 class="title">Hwanhee Lee (이환희)</h1>
         <img src="profile.jpg" width=150 alt="">
         
         <p>Ph.D student in ECE at Seoul National University</p>
