--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <header>
         <h1>Henry Hwanhee Lee (이환희)</h1>
-        <img src="profile.jpg" width=150 alt="">
+        <img src="materials/profile.jpg" width=125 alt="">
         <p>Ph.D student in ECE at Seoul National University</p>
         <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br/>
         <a href="https://scholar.google.co.kr/citations?user=eRM8zHkAAAAJ&hl=ko">
@@ -35,7 +35,7 @@
         </a>
         <a href="https://github.com/hwanheelee1993">
           <i class="fab fa-github"></i> Github<br/>
-        <a href="CV.pdf">
+        <a href="materials/CV.pdf">
           [CV]<br/>		
         </a>
       </header>
