--- a/index.html
+++ b/index.html
@@ -70,14 +70,19 @@
 
 <ul>
 		        <h4 id="conferences">Conference Publications</h4>
-
+                	<p><li>
+			<a href="">
+				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
+			</a><br>		      
+		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br>
+							Findings of EMNLP 2021
+			</li></p> 
+	
 			<p><li>
 				<a href="">
-								<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
-							</a><br>
-                Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung,  
-								<br>	
-							 CIKM 2021 				
+					<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
+				</a><br>
+                		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung, <br> CIKM 2021 				
 			</li></p>      
                 	<p><li>
 				<a href="https://aclanthology.org/2021.acl-short.29.pdf">
