--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 			<a href="">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
 			</a><br>		      
-		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br>
-							Findings of EMNLP 2021
+		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> Findings of EMNLP 2021
 			</li></p> 
 	
 			<p><li>
