--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <header>
         <h1>Henry Hwanhee Lee (이환희)</h1>
-        <img src="materials/profile.jpg" width=125 alt="">
+        <img src="materials/profile.jpg" width=200 alt="">
         <p>Ph.D student in ECE at Seoul National University</p>
         <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br/>
         <a href="https://scholar.google.co.kr/citations?user=eRM8zHkAAAAJ&hl=ko">
@@ -78,13 +78,13 @@
 			</li></p> 
 	
 			<p><li>
-				<a href="">
+				<a href="https://arxiv.org/abs/2108.12560">
 					<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
 				</a><br>
                 		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung, <br> CIKM 2021 				
 			</li></p>      
                 	<p><li>
-				<a href="https://aclanthology.org/2021.acl-short.29.pdf">
+				<a href="https://aclanthology.org/2021.acl-short.29">
 					<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
 				</a><br>				
 				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung, <br> ACL 2021 [<a href="https://github.com/hwanheelee1993/UMIC", style="color:brown">
@@ -119,7 +119,7 @@
 							</a>]                            
                         </li></p>
                 	<p><li>
-			<a href="https://arxiv.org/pdf/1912.00846.pdf">
+			<a href="https://arxiv.org/pdf/1912.00846">
 				<em>Attentive Modality Hopping Mechanism for Speech Emotion Recognition,</em>
 			</a><br>		      
 		        Seunghyun Yoon, Subhadeep Dey, <b>Hwanhee Lee</b>, Kyomin Jung<br>
@@ -127,7 +127,7 @@
 							ICASSP 2020 (Oral)
 			</li></p>       
 			<p><li>
-			<a href="http://milab.snu.ac.kr/pub/AAAI2019Kim.pdf">
+			<a href="https://ojs.aaai.org//index.php/AAAI/article/view/4629">
 				<em>Improving Neural Question Generation using Answer Separation,</em>
 			</a><br>				
 			Yanghoon Kim, <b>Hwanhee Lee</b>, Joongbo Shin, Kyomin Jung<br>
@@ -137,7 +137,7 @@
 
 			<h4 id="workshops">Peer Reviewed Workshops</h4>
 			<p><li>
-				<a href="https://www.aclweb.org/anthology/2021.maiworkshop-1.13.pdf">
+				<a href="https://www.aclweb.org/anthology/2021.maiworkshop-1.13/">
 					<em>Learning to Select Question-Relevant Relations for Visual Question Answering,</em>
 				</a><br>				
 				Jaewoong Lee*, Heejoon Lee*, <b>Hwanhee Lee</b>, Kyomin Jung<br>
@@ -161,7 +161,7 @@
 							</a>]  				
 			</li></p>  
       <p><li>
-			<a href="https://arxiv.org/abs/2004.08299.pdf">
+			<a href="https://arxiv.org/abs/2004.08299">
 			<em>DSTC8-AVSD: Multimodal Semantic Transformer Network with Retrieval StyleWord Generator,</em>
 			</a><br>
 	      		<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Doo Soon Kim, Trung Bui, Kyomin Jung<br>
