--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Henry Hwanhee Lee (이환희)</h1>
+        <h1>Henry Hwanhee Lee</h1>
+	      <h2>이환희</h2>
         <img src="materials/profile.jpg" width=200 alt="">
         <p>Ph.D student in ECE at Seoul National University</p>
         <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br/>
@@ -71,14 +72,14 @@
 <ul>
 		        <h4 id="conferences">Conference Publications</h4>
                 	<p><li>
-			<a href="">
+			<a href="https://arxiv.org/abs/2108.12560">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
 			</a><br>		      
 		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> EMNLP-Findings 2021
 			</li></p> 
 	
 			<p><li>
-				<a href="https://arxiv.org/abs/2108.12560">
+				<a href="">
 					<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
 				</a><br>
                 		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung, <br> CIKM 2021 				
