--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<a href="https://arxiv.org/abs/2108.12560">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
 			</a><br>		      
-		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> EMNLP-Findings 2021
+		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> EMNLP 2021 Findings
 			</li></p> 
 	
 			<p><li>
