--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</li></p> 
 	
 			<p><li>
-				<a href="">
+				<a href="https://arxiv.org/pdf/2109.15107">
 					<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
 				</a><br>
                 		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung, <br> CIKM 2021 				
