--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <ul>
 		        <h4 id="conferences">Conference Publications</h4>
                 	<p><li>
-			<a href="https://arxiv.org/abs/2108.12560">
+			<a href="https://aclanthology.org/2021.findings-emnlp.395/">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
 			</a><br>		      
 		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> EMNLP 2021 Findings
