--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <h3 id="publications">Selected Publications</h3>
 
 <ul>
-		        <h4 id="conferences">Conference Publications</h4>
+		        <!--<h4 id="conferences">International Conference Publications</h4>-->
                 	<p><li>
 			<a href="https://aclanthology.org/2021.findings-emnlp.395/">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
