--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			</a><br>		      
 		        Seunghyun Yoon, Subhadeep Dey, <b>Hwanhee Lee</b>, Kyomin Jung<br>
 
-							ICASSP 2020 (Oral)
+							ICASSP 2020
 			</li></p>       
 			<p><li>
 			<a href="https://ojs.aaai.org//index.php/AAAI/article/view/4629">
