--- a/index.html
+++ b/index.html
@@ -140,16 +140,14 @@
 </ul>   
 <h3 id="awards">Scholarships & Awards</h3>
 <h4 class="education">
-  <a href="https://aiis.snu.ac.kr/sub4_3.php">Youlchon AI STAR Scholarship
-  <sup>2021.09 </sup>
-</h4>
-<h4 class="education">
-  Scholarship of Electronics, Electrical and Computer Engineering
-  <sup>2018.03 </sup>
-</h4>	
-<h4 class="education">
-  National Science & Technology Scholarship (Full-tuition)
-  <sup>2013.03-2017.02</sup>
+<ul>	
+  <li><a href="https://aiis.snu.ac.kr/sub4_3.php">Youlchon AI STAR Scholarship
+	  <sup>2021.09 </sup></li>
+  <li>Scholarship of Electronics, Electrical and Computer Engineering
+	  <sup>2018.03 </sup></li>
+  <li>National Science & Technology Scholarship (Full-tuition)
+	  <sup>2013.03-2017.02</sup></li>
+	</ul>
 </h4>	     
       </section>
       <footer>
