--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 			<a href="https://aclanthology.org/2021.findings-emnlp.395/">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
 			</a><br>		      
-		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> EMNLP 2021 Findings
+		        <b>Hwanhee Lee</b>, Thomas Scialom, Seunghyun Yoon, Franck Dernoncourt, and Kyomin Jung<br> EMNLP 2021 Findings [<a href="https://github.com/hwanheelee1993/QACE", style="color:brown">
+								<em>Code</em>
+							</a>] [<a href="materials/EMNLP21-QACE-Slides.pdf", style="color:brown">
+								<em>Slide</em>
 			</li></p> 
 	
 			<p><li>
