--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Henry Hwanhee Lee</h1>
+        <h1>Hwanhee (Henry) Lee</h1>
 	      <h2>이환희</h2>
         <img src="materials/profile.jpg" width=200 alt="">
         <p>Ph.D student in ECE at Seoul National University</p>
@@ -42,7 +42,7 @@
       </header>
       <section>
       <p>I am a Ph.D student in ECE at Seoul National University. My Research Interest is in the field of Natural Language Processing, especially about
-(i) Text Evaluation Metric,
+(i) Text Generation and Evaluation,
 (ii) Language Grounding with Vision,
 	      and (iii) Question Answering.</p>
 
