--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h4 class="education">
   <a href="http://en.snu.ac.kr/">Seoul National University (SNU)</a>, Seoul, Korea
-  <sup>2017.03 - Current </sup>
+  <sup>2017.03 - 2022.08(Expected) </sup>
 </h4>
 
 <ul>
