--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
-                	<p><li>
+	
+                        <p><li>
+                        Hwanhee Lee, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung, 
+                                            <a href="">
+                                            <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em> </a> Findings of the Association for Computational Linguistics: NAACL 2022 (Findings of NAACL), July 2022, Seattle, WA, USA
+                        </li></p>	
+	
+                	<p><li>				
+				
 			<a href="https://aclanthology.org/2021.findings-emnlp.395/">
 				<em>QACE: Asking Questions to Evaluate an Image Caption,</em>
 			</a><br>		      
