--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 	
                         <p><li>
-                        Hwanhee Lee, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung, 
+				<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung, 
                                             <a href="">
                                             <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em> </a> Findings of the Association for Computational Linguistics: NAACL 2022 (Findings of NAACL), July 2022, Seattle, WA, USA
                         </li></p>	
