--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 	
                         <p><li>
-				<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung, 
-                                            <a href="">
-                                            <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em> </a> Findings of the Association for Computational Linguistics: NAACL 2022 (Findings of NAACL), July 2022, Seattle, WA, USA
+			<a href="">
+				    <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em>
+			</a><br> 
+			<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung, <br>
+				   NAACL 2022 Findings
                         </li></p>	
 	
                 	<p><li>				
