--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 	
                         <p><li>
-			<a href="">
+			<a href="https://arxiv.org/abs/2205.02035">
 				    <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em>
 			</a><br> 
-			<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung, <br>
+			<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung <br>
 				   NAACL 2022 Findings
                         </li></p>	
 	
@@ -92,7 +92,7 @@
 			</li></p> 
 	
 			<p><li>
-				<a href="https://arxiv.org/pdf/2109.15107">
+				<a href="https://arxiv.org/abs/2109.15107">
 					<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
 				</a><br>
                 		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung, <br> CIKM 2021 				
@@ -133,7 +133,7 @@
 							</a>]                            
                         </li></p>
                 	<p><li>
-			<a href="https://arxiv.org/pdf/1912.00846">
+			<a href="https://arxiv.org/abs/1912.00846">
 				<em>Attentive Modality Hopping Mechanism for Speech Emotion Recognition,</em>
 			</a><br>		      
 		        Seunghyun Yoon, Subhadeep Dey, <b>Hwanhee Lee</b>, Kyomin Jung<br>
