--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 				<a href="https://arxiv.org/abs/2109.15107">
 					<em>CrossAug: A Contrastive Data Augmentation Method for Debiasing Fact Verification Models,</em>
 				</a><br>
-                		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung, <br> CIKM 2021 				
+                		Minwoo Lee, Seungpil Won, Juae Kim, <b>Hwanhee Lee</b>, Cheoneum Park and Kyomin Jung<br> CIKM 2021 				
 			</li></p>      
                 	<p><li>
 				<a href="https://aclanthology.org/2021.acl-short.29">
 					<em>UMIC: An Unreferenced Metric for Image Captioning via Contrastive Learning,</em>
 				</a><br>				
-				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung, <br> ACL 2021 [<a href="https://github.com/hwanheelee1993/UMIC", style="color:brown">
+				<b>Hwanhee Lee</b>, Seunghyun Yoon, Franck Dernoncourt, Trung Bui, and Kyomin Jung<br> ACL 2021 [<a href="https://github.com/hwanheelee1993/UMIC", style="color:brown">
 								<em>Code</em>
 							</a>] [<a href="materials/ACL21-UMIC-Slides.pdf", style="color:brown">
 								<em>Slide</em>
@@ -114,8 +114,7 @@
 								<em>Entangled Bidirectional Encoder to Autoregressive Decoder for Sequential Recommendation,</em>
 							</a><br>
 				
-				Taegwan Kang, <b>Hwanhee Lee</b>, Byeongjin Choe, and Kyomin Jung, 
-								<br>	
+				Taegwan Kang, <b>Hwanhee Lee</b>, Byeongjin Choe, and Kyomin Jung<br>	
 							 SIGIR 2021 				
 			</li></p>  	
 	
