--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <h3 id="awards">Scholarships & Awards</h3>
 <h4 class="education">
 <ul>	
-	<li><a href="https://aiis.snu.ac.kr/sub4_3.php">Youlchon AI STAR Scholarship</a>
+	<li><a href="https://aiis.snu.ac.kr/bbs/board.php?bo_table=eng4_3">Youlchon AI STAR Scholarship</a>
 	  <sup>2021.09 </sup></li>
   <li>Scholarship of Electronics, Electrical and Computer Engineering
 	  <sup>2018.03 </sup></li>
