--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
         <a href="https://github.com/hwanheelee1993">
           <i class="fab fa-github"></i> Github<br/>
-        <a href="materials/CV.pdf">
+        <a href="materials/CV_Hwanhee_Lee.pdf">
           [CV]<br/>		
         </a>
       </header>
