--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hwanhee Lee | Ph.D student in ECE at Seoul National University</title>
+    <title>Hwanhee Lee | Ph.D candidate in ECE at Seoul National University</title>
 
     <meta property="og:title" content="Hwanhee Lee" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="Ph.D student in ECE at Seoul National University" />
-    <meta property="og:description" content="Ph.D student in ECE at Seoul National University" />
+    <meta name="description" content="Ph.D candidate in ECE at Seoul National University" />
+    <meta property="og:description" content="Ph.D candidate in ECE at Seoul National University" />
     <link rel="canonical" href="https://hwanheelee1993.github.io/" />
     <meta property="og:url" content="https://hwanheelee1993.github.io/" />
     <meta property="og:site_name" content="Hwanhee Lee" />
@@ -29,7 +29,7 @@
         <h1>Hwanhee (Henry) Lee</h1>
 	      <h2>이환희</h2>
         <img src="materials/profile.jpg" width=200 alt="">
-        <p>Ph.D student in ECE at Seoul National University</p>
+        <p>Ph.D candidate in ECE at Seoul National University</p>
         <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br/>
         <a href="https://scholar.google.co.kr/citations?user=eRM8zHkAAAAJ&hl=ko">
           <i class="ai ai-google-scholar"></i>  Google Scholar<br/>
@@ -54,7 +54,7 @@
 </h4>
 
 <ul>
-  <li>Integrated M.S./Ph.D. student in <a href="https://ece.snu.ac.kr/en">Electrical and Computer Engineering</a></li>
+  <li>Integrated M.S./Ph.D. course in <a href="https://ece.snu.ac.kr/en">Electrical and Computer Engineering</a></li>
   <li>Advisor: <a href="http://milab.snu.ac.kr/kjung/index.html">Prof. Kyomin Jung</a></li>
 </ul>
 
