--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <h4 class="education">
   <a href="http://en.snu.ac.kr/">Seoul National University (SNU)</a>, Seoul, Korea
-  <sup>2013.03 - 2017.02</sup>
+  <sup>2017.02</sup>
 </h4>
 
 <ul>
