--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       </header>
       <section>
       <p>I am a Ph.D student in ECE at Seoul National University. My Research Interest is in the field of Natural Language Processing, especially about
-(i) Text Generation and Evaluation,
-(ii) Language Grounding with Vision,
-	      and (iii) Question Answering.</p>
+(i) Language Generation and Evaluation,
+(ii) Factual Consistency Evaluation and Optimization,
+	      and (iii) Multimodal Language Understanding.</p>
 
 <h3 id="education">Education</h3>
 
