--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
 				    <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em>
 			</a><br> 
 			<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung <br>
-				   NAACL 2022 Findings
+				   NAACL 2022 Findings [<a href="https://github.com/hwanheelee1993/MFMA", style="color:brown">
+								<em>Code</em>
+							</a>] [<a href="materials/NAACL22-MFMA-Slides.pdf", style="color:brown">
+								<em>Slide</em>
+							</a>] [<a href="materials/NAACL22-MFMA-Poster.pdf", style="color:brown">
+								<em>Poster</em>
+							</a>]
                         </li></p>	
 	
                 	<p><li>				
