--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </a>
       </header>
       <section>
-      <p>I am a Ph.D candidate in ECE at Seoul National University. (Graduation Expected Aug, 2022) My Research Interest is in the field of Natural Language Processing, especially about
+      <p>I am a Ph.D candidate in ECE at Seoul National University. (Graduation Expected August 2022) My Research Interest is in the field of Natural Language Processing, especially about
 (i) Language Generation and Evaluation,
 (ii) Factual Consistency Evaluation and Optimization,
 	      and (iii) Multimodal Language Understanding.</p>
