--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 							</a>] [<a href="materials/NAACL22-MFMA-Poster.pdf", style="color:brown">
 								<em>Poster</em>
 							</a>]
+							      [<a href="https://medium.com/snu-aiis-blog/check-factual-consistency-of-auto-generated-summaries-using-masked-summarization-bc2a19e3422e", style="color:brown">
+								<em>Blog</em>
+							</a>]				
                         </li></p>	
 	
                 	<p><li>				
