--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
 </ul>   
 <h3 id="awards">Scholarships & Awards</h3>
 <h4 class="education">
-<ul>	
-	<li><a href="https://aiis.snu.ac.kr/bbs/board.php?bo_table=eng4_3">Youlchon AI STAR Scholarship</a>
+<ul>
+  <li>Distinguished Ph.D. Dissertation Award
+	<sup>2022.07</sup></li>
+  <li><a href="https://aiis.snu.ac.kr/bbs/board.php?bo_table=eng4_3">Youlchon AI STAR Scholarship</a>
 	  <sup>2021.09 </sup></li>
   <li>Scholarship of Electronics, Electrical and Computer Engineering
 	  <sup>2018.03 </sup></li>
