--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         </a>
         <a href="https://github.com/hwanheelee1993">
           <i class="fab fa-github"></i> Github<br/>
+	</a>
+        <a href="https://www.linkedin.com/in/hwanhee-lee-69a435133/">
+          <i class="fab fa-linkedin"></i> Linkedin<br/>
+	</a>
+        <a href="https://twitter.com/hwanheelee1993">
+          <i class="fab fa-twitter"></i> Twitter<br/>
+	</a>	      
         <a href="materials/CV_Hwanhee_Lee.pdf">
           [CV]<br/>		
         </a>
