--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
 </h4>
 
 <ul>
-  <li>Integrated M.S./Ph.D. course in <a href="https://ece.snu.ac.kr/en">Electrical and Computer Engineering</a></li>
+  <li>Ph.D. in <a href="https://ece.snu.ac.kr/en">Electrical and Computer Engineering</a></li>
   <li>Advisor: <a href="http://milab.snu.ac.kr/kjung/index.html">Prof. Kyomin Jung</a></li>
+  <li>Distinguished Ph.D Dissertation Award</li>
+	
 </ul>
 
 <h4 class="education">
