--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 <ul>
   <li>Ph.D. in <a href="https://ece.snu.ac.kr/en">Electrical and Computer Engineering</a></li>
+  <li>Thesis: Factual Consistency Evaluation for Conditional Text Generation Systems</li>	
   <li>Advisor: <a href="http://milab.snu.ac.kr/kjung/index.html">Prof. Kyomin Jung</a></li>
   <li>Distinguished Ph.D Dissertation Award</li>
 	
