--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <meta property="og:title" content="Hwanhee Lee" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="Ph.D candidate in ECE at Seoul National University" />
-    <meta property="og:description" content="Ph.D candidate in ECE at Seoul National University" />
+    <meta name="description" content="Postdoctoral Researcher at Seoul National University" />
+    <meta property="og:description" content="Postdoctoral Researcher at Seoul National University" />
     <link rel="canonical" href="https://hwanheelee1993.github.io/" />
     <meta property="og:url" content="https://hwanheelee1993.github.io/" />
     <meta property="og:site_name" content="Hwanhee Lee" />
@@ -48,7 +48,7 @@
         </a>
       </header>
       <section>
-      <p>I am a Ph.D candidate in ECE at Seoul National University. (Graduation Expected August 2022) My Research Interest is in the field of Natural Language Processing, especially about
+      <p>I am a Postdoctoral Researcher at Seoul National University. My Research Interest is in the field of Natural Language Processing, especially about
 (i) Language Generation and Evaluation,
 (ii) Factual Consistency Evaluation and Optimization,
 	      and (iii) Multimodal Language Understanding.</p>
