--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hwanhee Lee | Ph.D candidate in ECE at Seoul National University</title>
+    <title>Hwanhee Lee | Postdoctoral Researcher at Seoul National University</title>
 
     <meta property="og:title" content="Hwanhee Lee" />
     <meta property="og:locale" content="en_US" />
