--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Hwanhee (Henry) Lee</h1>
 	      <h2>이환희</h2>
         <img src="materials/profile.jpg" width=200 alt="">
-        <p>Ph.D candidate in ECE at Seoul National University</p>
+        <p>Postdoctoral Researcher at Seoul National University</p>
         <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br/>
         <a href="https://scholar.google.co.kr/citations?user=eRM8zHkAAAAJ&hl=ko">
           <i class="ai ai-google-scholar"></i>  Google Scholar<br/>
