--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
       
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />	  
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css"
+    />	  
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
@@ -28,9 +42,11 @@
       <header>
         <h1>Hwanhee (Henry) Lee</h1>
 	      <h2>이환희</h2>
-        <img src="materials/profile.jpg" width=200 alt="">
+        <img src="materials/profile.jpg" width=200 alt="Face" />
         <p>Postdoctoral Researcher at Seoul National University</p>
-        <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br/>
+	<i class="material-icons md-18">location_on</i> Seoul, Korea<br />
+        <i class="material-icons md-18">email</i> cpi1234@snu.ac.kr<br />	      
+	      
         <a href="https://scholar.google.co.kr/citations?user=eRM8zHkAAAAJ&hl=ko">
           <i class="ai ai-google-scholar"></i>  Google Scholar<br/>
         </a>
