--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="materials/profile.jpg" width=200 alt="Face" />
         <p>Postdoctoral Researcher at Seoul National University</p>
 	<i class="material-icons md-18">location_on</i> Seoul, Korea<br />
-        <i class="material-icons md-18">email</i> cpi1234@snu.ac.kr<br />	      
+        <i class="material-icons md-18">email</i> wanted1007@snu.ac.kr<br />	      
 	      
         <a href="https://scholar.google.co.kr/citations?user=eRM8zHkAAAAJ&hl=ko">
           <i class="ai ai-google-scholar"></i>  Google Scholar<br/>
