--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <i class="fab fa-twitter"></i> Twitter<br/>
 	</a>	      
         <a href="materials/CV_Hwanhee_Lee.pdf">
-          [CV]<br/>		
+	<i class="material-icons md-18">insert_drive_file</i>CV<br/>		
         </a>
       </header>
       <section>
