--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
-	
+			<p><li>
+				<a href="https://arxiv.org/abs/2205.04157">
+					<em>Task-specific Compression for Multi-task Language Models using Attribution-based Pruning,</em>
+				</a><br>
+                		Nakyeong Yang, Yunah Jang, Hwanhee Lee, Seohyeong Jeong and Kyomin Jung<br> EACL 2023 Findings 				
+			</li></p>   	
                         <p><li>
 			<a href="https://arxiv.org/abs/2205.02035">
 				    <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em>
