--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<a href="https://arxiv.org/abs/2205.04157">
 					<em>Task-specific Compression for Multi-task Language Models using Attribution-based Pruning,</em>
 				</a><br>
-                		Nakyeong Yang, Yunah Jang, Hwanhee Lee, Seohyeong Jeong and Kyomin Jung<br> EACL 2023 Findings 				
+				Nakyeong Yang, Yunah Jang, <b>Hwanhee Lee</b>, Seohyeong Jeong and Kyomin Jung<br> EACL 2023 Findings 				
 			</li></p>   	
                         <p><li>
 			<a href="https://arxiv.org/abs/2205.02035">
