--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <p>I am a Postdoctoral Researcher at Seoul National University. My Research Interest is in the field of Natural Language Processing, especially about
 (i) Language Generation and Evaluation,
 (ii) Factual Consistency Evaluation and Optimization,
-	      and (iii) Multimodal Language Understanding.</p>
+	      and (iii) Multimodal Language Understanding. I'll join the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor.</p>
 
 <h3 id="education">Education</h3>
 
