--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hwanhee Lee | Postdoctoral Researcher at Seoul National University</title>
+    <title>Hwanhee Lee | Assistant Professor at Chung-Ang University</title>
 
     <meta property="og:title" content="Hwanhee Lee" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="Postdoctoral Researcher at Seoul National University" />
-    <meta property="og:description" content="Postdoctoral Researcher at Seoul National University" />
+    <meta name="description" content="Assistant Professor at Chung-Ang University" />
+    <meta property="og:description" content="Assistant Professor at Chung-Ang University" />
     <link rel="canonical" href="https://hwanheelee1993.github.io/" />
     <meta property="og:url" content="https://hwanheelee1993.github.io/" />
     <meta property="og:site_name" content="Hwanhee Lee" />
@@ -43,7 +43,7 @@
         <h1>Hwanhee (Henry) Lee</h1>
 	      <h2>이환희</h2>
         <img src="materials/profile.jpg" width=200 alt="Face" />
-        <p>Postdoctoral Researcher at Seoul National University</p>
+        <p>Assistant Professor at Chung-Ang University</p>
 	<i class="material-icons md-18">location_on</i> Seoul, Korea<br />
         <i class="material-icons md-18">email</i> hwanheelee@cau.ac.kr <br />	      
 	      
@@ -64,10 +64,10 @@
         </a>
       </header>
       <section>
-      <p>I am a Postdoctoral Researcher at Seoul National University. My Research Interest is in the field of Natural Language Processing, especially about
+      <p>I am a Assistant Professor in Department of AI at Chung-Ang University. My Research Interest is in the field of Natural Language Processing, especially about
 (i) Language Generation and Evaluation,
 (ii) Factual Consistency Evaluation and Optimization,
-	      and (iii) Multimodal Language Understanding. <br><br>I'll join the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor. If you're interested in the lab, please visit <a href="https://sites.google.com/view/cau-li/">this page.</a></p>
+	      and (iii) Multimodal Language Understanding. <br><br>I recently joined the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor. If you're interested in the lab, please visit <a href="https://sites.google.com/view/cau-li/">this page.</a></p>
 
 <h3 id="education">Education</h3>
 
