--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 			<p><li>
+				<a href="https://arxiv.org/abs/2212.10938">
+					<em>Critic-Guided Decoding for Controlled Text Generation,</em>
+				</a><br>
+				Minbeom Kim, <b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, Kyomin Jung<br> ACL 2023 Findings 				
+			</li></p>   	
+			<p><li>
 				<a href="https://arxiv.org/abs/2205.04157">
 					<em>Task-specific Compression for Multi-task Language Models using Attribution-based Pruning,</em>
 				</a><br>
