--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 			<p><li>
+				<a href="">
+					<em>Dialogizer: Context-aware Conversational-QA Dataset Generation from Textual Sources,</em>
+				</a><br>
+				Yerin Hwang, Yongil Kim, Hyunkyung Bae, <b>Hwanhee Lee</b>, Jeesoo Bang, Kyomin Jung<br> EMNLP 2023 				
+			</li></p>  
+			<p><li>
+				<a href="https://arxiv.org/abs/2305.13808">
+					<em>Asking Clarification Questions to Handle Ambiguity in Open-Domain QA,</em>
+				</a><br>
+				Dongryeol Lee, Segwang Kim, Minwoo Lee, <b>Hwanhee Lee</b>, Joonsuk Park, Sang-Woo Lee, Kyomin Jung<br> EMNLP 2023 Findings 				
+			</li></p>  
+	
+			<p><li>
 				<a href="https://arxiv.org/abs/2212.10938">
 					<em>Critic-Guided Decoding for Controlled Text Generation,</em>
 				</a><br>
