--- a/index.html
+++ b/index.html
@@ -99,22 +99,34 @@
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 			<p><li>
 				<a href="">
+					<em>KoCoSa: Korean Context-aware Sarcasm Detection Dataset,</em>
+				</a><br>
+				Yumin Kim*, Heejae Suh*, Mingi Kim*, Dongyeon Won* and <b>Hwanhee Lee✝</b><br> COLING 2024 				
+			</li></p> 
+			<p><li>
+				<a href="">
+					<em>Kosmic: Korean Text Similarity Metric Reflecting Honorific Distinctions,</em>
+				</a><br>
+				Yerin Hwang, Yongil Kim, Hyunkyung Bae, Jeesoo Bang, <b>Hwanhee Lee✝</b> and Kyomin Jung✝<br> COLING 2024 				
+			</li></p> 	
+			<p><li>
+				<a href="https://aclanthology.org/2023.emnlp-main.545/">
 					<em>Dialogizer: Context-aware Conversational-QA Dataset Generation from Textual Sources,</em>
 				</a><br>
-				Yerin Hwang, Yongil Kim, Hyunkyung Bae, <b>Hwanhee Lee</b>, Jeesoo Bang, Kyomin Jung<br> EMNLP 2023 				
+				Yerin Hwang, Yongil Kim, Hyunkyung Bae, <b>Hwanhee Lee✝</b>, Jeesoo Bang, Kyomin Jung✝<br> EMNLP 2023 				
 			</li></p>  
 			<p><li>
-				<a href="https://arxiv.org/abs/2305.13808">
+				<a href="https://aclanthology.org/2023.findings-emnlp.772/">
 					<em>Asking Clarification Questions to Handle Ambiguity in Open-Domain QA,</em>
 				</a><br>
 				Dongryeol Lee, Segwang Kim, Minwoo Lee, <b>Hwanhee Lee</b>, Joonsuk Park, Sang-Woo Lee, Kyomin Jung<br> EMNLP 2023 Findings 				
 			</li></p>  
 	
 			<p><li>
-				<a href="https://arxiv.org/abs/2212.10938">
+				<a href="https://aclanthology.org/2023.findings-acl.281/">
 					<em>Critic-Guided Decoding for Controlled Text Generation,</em>
 				</a><br>
-				Minbeom Kim, <b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, Kyomin Jung<br> ACL 2023 Findings 				
+				Minbeom Kim, <b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee✝, Kyomin Jung✝<br> ACL 2023 Findings 				
 			</li></p>   	
 			<p><li>
 				<a href="https://arxiv.org/abs/2205.04157">
@@ -126,7 +138,7 @@
 			<a href="https://arxiv.org/abs/2205.02035">
 				    <em>Masked Summarization to Generate Factually Inconsistent Summaries for Improved Factual Consistency Checking,</em>
 			</a><br> 
-			<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee, and Kyomin Jung <br>
+			<b>Hwanhee Lee</b>, Kang Min Yoo, Joonsuk Park, Hwaran Lee✝ and Kyomin Jung✝ <br>
 				   NAACL 2022 Findings [<a href="https://github.com/hwanheelee1993/MFMA", style="color:brown">
 								<em>Code</em>
 							</a>] [<a href="materials/NAACL22-MFMA-Slides.pdf", style="color:brown">
