--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
+
+			<p><li>
+				<a href="https://arxiv.org/abs/2311.09820">
+					<em>IterCQR: Iterative Conversational Query Reformulation with Retrieval Guidance,</em>
+				</a><br>
+				Yunah Jang, Kang-il Lee, Hyunkyung Bae, <b>Hwanhee Lee✝</b>, Kyomin Jung✝<br> NAACL 2024			
+			</li></p>
+			<p><li>
+				<a href="https://arxiv.org/abs/2311.09585">
+					<em>LifeTox: Unveiling Implicit Toxicity in Life Advice,</em>
+				</a><br>
+				Minbeom Kim, Jahyun Koo, <b>Hwanhee Lee</b>, Joonsuk Park, Hwaran Lee, Kyomin Jung<br> NAACL 2024 				
+			</li></p>	
 			<p><li>
 				<a href="">
 					<em>KoCoSa: Korean Context-aware Sarcasm Detection Dataset,</em>
