--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
-
+			<p><li>
+				<a href="https://arxiv.org/abs/2404.11184">
+					<em>FIZZ: Factual Inconsistency Detection by Zoom-in Summary and Zoom-out Document,</em>
+				</a><br>
+				Joonho Yang, Seunghyun Yoon, Byeongjeong Kim, <b>Hwanhee Lee✝</b><br> EMNLP 2024			
+			</li></p>
 			<p><li>
 				<a href="https://arxiv.org/abs/2311.09820">
 					<em>IterCQR: Iterative Conversational Query Reformulation with Retrieval Guidance,</em>
