--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <p>I am an Assistant Professor in Department of AI at Chung-Ang University, Seoul, Korea. My Research Interest is in the field of Natural Language Processing, especially about
 (i) Natural Language Generation and Evaluation,
 (ii) Factual Consistency Evaluation and Optimization,
-	      and (iii) Multimodal Language Understanding. <br><br>I recently joined the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor. If you're interested in the lab, please visit <a href="https://sites.google.com/view/cau-li/">this page.</a></p>
+	      and (iii) Truthful and Safe Language Models. <br><br>I've been working in the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor. If you're interested in the lab, please visit <a href="https://sites.google.com/view/cau-li/">this page.</a></p>
 
 <h3 id="education">Education</h3>
 
