--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 			<p><li>
+				<a href="https://arxiv.org/abs/2410.13339">
+					<em>Probing-RAG: Self-Probing to Guide Language Models in Selective Document Retrieval,</em>
+				</a><br>
+				Ingeol Baek, Hwan Chang, Byeongjeong Kim, Jimin Lee, <b>Hwanhee Lee✝</b><br> NAACL 2025 Findings			
+			</li></p>
+
+			<p><li>
+				<a href="https://arxiv.org/abs/2404.11826">
+					<em>AdvisorQA: Towards Helpful and Harmless Advice-seeking Question Answering with Collective Intelligence,</em>
+				</a><br>
+				Minbeom Kim, <b>Hwanhee Lee</b>, Joonsuk Park, Hwaran Lee, Kyomin Jung<br> NAACL 2025			
+			</li></p>
+	
+			<p><li>
 				<a href="https://arxiv.org/abs/2404.11184">
 					<em>FIZZ: Factual Inconsistency Detection by Zoom-in Summary and Zoom-out Document,</em>
 				</a><br>
