--- a/index.html
+++ b/index.html
@@ -97,6 +97,38 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
+
+			<p><li>
+				<a href="https://arxiv.org/abs/2502.11423">
+					<em>Exploring Persona Sentiment Sensitivity in Personalized Dialogue Generation,</em>
+				</a><br>
+				Younghyun Jun, <b>Hwanhee Lee✝</b><br> ACL 2025			
+			</li></p>
+			<p><li>
+				<a href="https://arxiv.org/abs/2412.15603">
+					<em>Dynamic Label Name Refinement for Few-Shot Dialogue Intent Classification,</em>
+				</a><br>
+				Gyutae Park, Ingeol Baek, Byeongjeong Kim, Joongbo Shin, <b>Hwanhee Lee✝</b><br> ACL 2025			
+			</li></p>
+			<p><li>
+				<a href="https://arxiv.org/abs/2406.11130">
+					<em>Dynamic Order Template Prediction for Generative Aspect-Based Sentiment Analysis,</em>
+				</a><br>
+				Younghyun Jun, <b>Hwanhee Lee✝</b><br> ACL 2025			
+			</li></p>
+			<p><li>
+				<a href="https://arxiv.org/abs/2502.11175">
+					<em>Investigating Language Preference of Multilingual RAG Systems,</em>
+				</a><br>
+				Jeonghyun Park, <b>Hwanhee Lee✝</b><br> ACL 2025 Findings			
+			</li></p>
+			<p><li>
+				<a href="https://arxiv.org/abs/2502.11441">
+					<em>Which Retain Set Matters for LLM Unlearning? A Case Study on Entity Unlearning,</em>
+				</a><br>
+				Hwan Chang, <b>Hwanhee Lee✝</b><br> ACL 2025 Findings			
+			</li></p>
+	
 			<p><li>
 				<a href="https://arxiv.org/abs/2410.13339">
 					<em>Probing-RAG: Self-Probing to Guide Language Models in Selective Document Retrieval,</em>
