--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <header>
         <h1>Hwanhee (Henry) Lee</h1>
 	      <h2>이환희</h2>
-        <img src="materials/profile.jpg" width=200 alt="Face" />
+        <img src="materials/profile_coling24.jpg" width=200 alt="Face" />
         <p>Assistant Professor at Chung-Ang University</p>
 	<i class="material-icons md-18">location_on</i> Seoul, Korea<br />
         <i class="material-icons md-18">email</i> hwanheelee@cau.ac.kr <br />	      
