--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
 <h3 id="awards">Scholarships & Awards</h3>
 <h4 class="education">
 <ul>
+  <li>Outstanding Area Chair, EMNLP 2024
+	<sup>2024.11</sup></li>
   <li>Distinguished Ph.D. Dissertation Award
 	<sup>2022.08</sup></li>
   <li><a href="https://aiis.snu.ac.kr/bbs/board.php?bo_table=eng4_3">Youlchon AI STAR Scholarship</a>
